--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.min.css">
+    <script src="https://kit.fontawesome.com/06b610ab4d.js" crossorigin="anonymous"></script>
     <title>Sale Themeplate #1</title>
 </head>
 <body>
-    
+    <header class="container-fluid">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-collapse"><i class="fas fa-solid fa-bars"></i></button>
+                <div class="navbar-container">
+                    <div class="navbar-social">
+                        <a href="#" class="navbar-social_link"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="#" class="navbar-social_link"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#" class="navbar-social_link"><i class="fa-brands fa-twitter"></i></a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="navbar-collapse">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="header-container container-fluid" style="background-image: url(img/header-img-2.jpg); background-position: center; background-repeat: no-repeat; background-size: cover;">
+            <div class="header-img_wrapper">
+                <div class="header-img_wrapper__box col-8">
+                    <h1>Sed sit amet purus vel turpis suscipit egestas</h1>
+                    <p>Vivamus maximus augue eu felis pretium, nec cursus nunc ultrices. Proin felis enim, sagittis id dictum sit amet, auctor in risus.</p>
+                    <a href="#" class="btn">show me more!</a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <section class="section-one container">
+        <h2>
+            <span class="green">people </span>choice
+        </h2>
+
+        <div class="section-container">
+            
+        </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
